kubernetes/deployall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
  namespace: testapp
  labels:
    app: testapp
spec:
  replicas: 2
  selector:           #
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp-container
        image: ghcr.io/djordje-git/testapp:latest
        ports:
        - containerPort: 11000
        resources:
          limits:
            cpu: "500m"
            memory: "2048Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 11000
          initialDelaySeconds: 40
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 11000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  namespace: testapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: goldbach.itdjordje.com  #dodati na CFu A record za ovo na LB
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:                  #ovo mu govori na koji servis i port ce da "spusta" saobracaj
          service:
            name: testapp-service
            port:
              number: 11000
  tls:
  - hosts:
    - goldbach.itdjordje.com
    secretName: testapp-tls
---
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
  namespace: testapp
  labels:
    app: testapp
spec:
  type: ClusterIP
  selector:                     #ovo mu govori na sta ce da "spusta" saobracaj
    app: testapp
  ports:
  - protocol: TCP
    port: 11000
    targetPort: 11000
